==> ComittmentIssues/BouyDev-v2/5. Development/2. Synthesis/Synthesis_GPSMEM_L4/Drivers/Sensor_API/HAL_GPS.c <==
#include "HAL_GPS.h"

GPS_Init_msg_t init_GPS(GPS_Handle_Typedef *hgps)
{

	if(MX_DMA_Init() != HAL_OK)  return GPS_Init_Periph_Config_Error;
	if(MX_UART4_Init() != HAL_OK) return GPS_Init_Periph_Config_Error;
	if(MX_TIM2_Init() != HAL_OK) return GPS_Init_Periph_Config_Error;

	/* attach handlers to gps instances*/
	hgps->gps_huart = &huart4;
	hgps->gps_htim  = &htim2;
	hgps->gps_hdmamem = &hdma_memtomem_dma1_channel1;

	/* Attach pointers to data buffer */
	hgps->GPS_Tx_Buffer = DMA_TX_Buffer;
	hgps->GPS_Rx_Buffer = DMA_RX_Buffer;
	hgps->GPS_Mem_Buffer = GNSS_Buffer;

	//poll a byte to see if reciever online
	uint8_t test_byte;
	if(HAL_UART_Receive(hgps->gps_huart,&test_byte,1,250) != HAL_OK)
	{
		return GPS_Init_Offline_Error;
	}
	UBX_MSG_t GPS_Acknowledgement_State = UBX_Send_Ack(hgps);
	if(GPS_Acknowledgement_State == UBX_ACK_ACK)
	{
		Clear_Buffer(hgps->GPS_Tx_Buffer,DMA_TX_BUFFER_SIZE);
		Clear_Buffer(hgps->GPS_Mem_Buffer,GNSS_BUFFER_SIZE);
		if( UBX_Configure_Baudrate(hgps) != UBX_ACK_ACK)
		{
			return GPS_Init_Baud_Config_Error;
		}

	}else if(GPS_Acknowledgement_State == UBX_TIMEOUT_Rx)
	{
		/*
		 * If Not recieving Ack-Ack on 115200, it could be possible that the device is
		 * already configured. change baud rate and try again
		 */
		//configure baud rate to 115200 and try again
		if(USART_Set_Baudrate(hgps,115200) == HAL_OK)
		{
			GPS_Acknowledgement_State = UBX_Send_Ack(hgps);
		}
		if(GPS_Acknowledgement_State == UBX_TIMEOUT_Rx || GPS_Acknowledgement_State == UBX_ACK_NACK)
		{
			return GPS_Init_Ack_Error;
		}


	}else if(GPS_Acknowledgement_State == UBX_TIMEOUT_Tx)
	{
		return GPS_Init_Ack_Tx_Error;
	}
	//configure message buffer
	if( UBX_Configure_Messages(hgps) != UBX_OK )
	{
		return GPS_Init_MSG_Config_Error;
	}
	return GPS_Init_OK;
}

UBX_MSG_t UBX_Send_Ack(GPS_Handle_Typedef *hgps)
{

	 uint8_t ubx_ack_string[] = {0xB5 ,0x62 ,0x06 ,0x09 ,0x0D ,0x00 ,0x00 ,0x00 ,0x00 ,0x00 ,0xFF ,0xFF ,0x00 ,0x00 ,0x00 ,0x00 ,0x00 ,0x00 ,0x17 ,0x31 ,0xBF };
	 int size = (sizeof(ubx_ack_string)/sizeof(*ubx_ack_string));
	 for (int i = 0; i < size ; ++i)
	 {
	  	hgps->GPS_Tx_Buffer[i] = ubx_ack_string[i];
	 }
	 TX_Cplt = 0;
	 if(__HAL_UART_GET_FLAG(hgps->gps_huart,UART_FLAG_TC))
	 {
		 __HAL_UART_CLEAR_FLAG(hgps->gps_huart,UART_FLAG_TC);
	 }
	 __HAL_UART_ENABLE_IT(hgps->gps_huart,UART_IT_TC);
	 if( HAL_UART_Transmit_DMA(hgps->gps_huart,hgps->GPS_Tx_Buffer, size) == HAL_OK)
	 {
	  //begin DMA Reception
	 while(TX_Cplt != SET);
	 TX_Cplt = 0; //clear flag
	 __HAL_UART_ENABLE_IT(hgps->gps_huart,UART_IT_IDLE);
	 __HAL_DMA_ENABLE_IT(hgps->gps_huart->hdmarx, DMA_IT_TC);
	 if(__HAL_TIM_GET_FLAG(hgps->gps_htim,TIM_FLAG_CC1) == SET)
	 {
		 __HAL_TIM_CLEAR_FLAG(hgps->gps_htim,TIM_FLAG_CC1);
	 }
	 M2M_Txfer_Cplt = 0;
	 HAL_UART_Receive_DMA(hgps->gps_huart,hgps->GPS_Rx_Buffer, DMA_RX_BUFFER_SIZE);

	 __HAL_TIM_ENABLE_IT(hgps->gps_htim,TIM_IT_CC1);
	 HAL_TIM_OC_Start_IT(hgps->gps_htim, TIM_CHANNEL_1);
	 HAL_TIM_Base_Start_IT(hgps->gps_htim);
	 }
	  while(M2M_Txfer_Cplt != SET)
	  {
		  //TODO: SET DEVICE TO LOW POWER MODE WHILE DMA TRASNFER OCCURS
		  //Check for either receiver time out or peripheral timeout event
		  if(M2M_Txfer_Cplt == HAL_TIMEOUT)
		  {
			  TIM_IDLE_Timeout = RESET;
			  M2M_Txfer_Cplt = RESET;
			  return UBX_TIMEOUT_Rx;
		  }
	  }
	  M2M_Txfer_Cplt = RESET;
	  char val = (char) 0xB5;
	  int index = (int)(strchr((char*)GNSS_Buffer,val))-(int)GNSS_Buffer;
	  UBX_MSG_t GPS_Acknowledgement_State;
	  if((index < 0) || (index >GNSS_BUFFER_SIZE))
	  {

	  }else{
	  uint8_t msg[10] = {0};
	  memcpy(msg,&hgps->GPS_Mem_Buffer[index],10);

	  uint16_t header = ((uint16_t)msg[0]<<8) | ((uint16_t)msg[1]);
	  if(header == 0xb562)
	  {
	 	 uint8_t ck_A =0, ck_B =0;
	 	 for (int i = 2; i < 8; ++i)
	 	 {
	 	 	ck_A += (uint8_t)msg[i];
	 	 	ck_B += ck_A;
	 	 }
	 	 if((ck_A == msg[8])&& (ck_B == msg[9]))
	 	 {
	 	 	//acknowledgement
	 	 	if(msg[2] == 0x05)
	 	 	{
	 		 	switch (msg[3])
	 		 	{
	 		 		case 0:
	 		 			GPS_Acknowledgement_State = UBX_ACK_NACK;
	 		 			break;
	 		 		case 1:
	 		 			GPS_Acknowledgement_State = UBX_ACK_ACK;
	 		 			break;
	 		 		}
	 		 	}
	 		 }
	 		 else
	 		 {
	 		 	GPS_Acknowledgement_State = UBX_ERROR;
	 		 }
	 	 }
	  }
	  return GPS_Acknowledgement_State;
}

UBX_MSG_t UBX_Configure_Baudrate(GPS_Handle_Typedef* hgps)
{

	//GPS is configured for 9600, change baud to 115200
	uint8_t ubx_baude_rate_config[] = {0xB5,0x62,0x06,0x00,0x14,0x00,0x01,0x00,0x00,0x00,0xD0,0x08,0x00,0x00,0x00,0xC2,0x01,0x00,0x07,0x00,0x03,0x00,0x00,0x00,0x00,0x00,0xC0,0x7E};
	uint32_t size =  sizeof(ubx_baude_rate_config)/sizeof(ubx_baude_rate_config[0]);
	memcpy(hgps->GPS_Tx_Buffer,ubx_baude_rate_config,size);
	if(HAL_UART_Transmit_DMA(hgps->gps_huart,hgps->GPS_Tx_Buffer,size) == HAL_OK)
	{
		 while(TX_Cplt != SET);
		 Clear_Buffer(hgps->GPS_Tx_Buffer,DMA_TX_BUFFER_SIZE);
		 if(USART_Set_Baudrate(hgps,115200) != HAL_OK)
		 {
			 return UBX_ERROR;
		 }
		 return UBX_Send_Ack(hgps);
	}
	return UBX_TIMEOUT_Tx;
}

void USART_GPS_IRQHandler(GPS_Handle_Typedef *hgps)
{
	if(__HAL_UART_GET_IT_SOURCE(hgps->gps_huart,UART_IT_IDLE))
	{
		uint32_t temp = hgps->gps_huart->Instance->ISR;
		temp = hgps->gps_huart->Instance->RDR;
		(void)temp;
		/* Case 1: gnss_length < DMA_RX BUFFER SIZE
		 * 		   disable Periph-Mem stream and
		 * 		   begin Mem - Mem transfer of known data
		 *
		 */
		//check flag in TIM2
		if(TIM_IDLE_Timeout == SET)
		{
			gnss_length = DMA_RX_BUFFER_SIZE - __HAL_DMA_GET_COUNTER(hgps->gps_huart->hdmarx);
			//Disable DMA and unlink from UART
			if(log_gps)
			{
				HAL_UART_DMAPause(hgps->gps_huart);
				hgps->gps_huart->hdmarx->Instance->CCR &= ~DMA_CCR_EN;
				__NOP();

			}else
			{
				HAL_UART_DMAStop(hgps->gps_huart);
			}
			//Timeout case: USART has recieved no data, Reciever timeout

			if(gnss_length > 0)
			{
				//begin transfer from mem to mem
				__HAL_DMA_ENABLE_IT(hgps->gps_hdmamem,DMA_IT_TC);
				HAL_DMA_Start(hgps->gps_hdmamem,(uint32_t)hgps->GPS_Rx_Buffer,(uint32_t)hgps->GPS_Mem_Buffer,gnss_length);

			}else
			{
				if(log_gps)
				{
					HAL_UART_DMAResume(hgps->gps_huart);
					hgps->gps_huart->hdmarx->Instance->CCR |= DMA_CCR_EN;
					__NOP();
				}
			/*
			 * Case 2: gnss_length == 0;
			 *
			 * Reciever has recieved no data and has thus timed out.
			 */
				M2M_Txfer_Cplt = HAL_TIMEOUT;
			}
			//clear tim flag
			TIM_IDLE_Timeout = 0;
			__HAL_UART_DISABLE_IT(hgps->gps_huart,UART_IT_IDLE);
		}

		__HAL_UART_CLEAR_FLAG(hgps->gps_huart,UART_FLAG_IDLE);
	} if(__HAL_UART_GET_IT_SOURCE(hgps->gps_huart,UART_IT_TC))
	{

		HAL_UART_AbortTransmit_IT(hgps->gps_huart);
		__HAL_UART_CLEAR_FLAG(hgps->gps_huart,UART_FLAG_IDLE);
		__HAL_UART_DISABLE_IT(hgps->gps_huart,UART_IT_IDLE);
		TX_Cplt = 1;

	}
	// additional error handling
	if(__HAL_UART_GET_IT_SOURCE(hgps->gps_huart,UART_IT_ERR))
	{
		//clear framing error
		if(__HAL_UART_GET_FLAG(hgps->gps_huart,UART_FLAG_FE) == SET)
		{
			__HAL_UART_CLEAR_FEFLAG(hgps->gps_huart);
		}
		//clear noise error
		if(__HAL_UART_GET_FLAG(hgps->gps_huart,UART_FLAG_NE) == SET)
		{
			__HAL_UART_CLEAR_NEFLAG(hgps->gps_huart);
		}
		//clear overun error
		if(__HAL_UART_GET_FLAG(hgps->gps_huart,UART_FLAG_ORE) == SET)
		{
			uint8_t temp = hgps->gps_huart->Instance->RDR;
			(void)temp;
			__HAL_UART_CLEAR_OREFLAG(hgps->gps_huart);
		}
		//clear parity errors
		if(__HAL_UART_GET_FLAG(hgps->gps_huart,UART_FLAG_PE) == SET)
		{
			__HAL_UART_CLEAR_PEFLAG(hgps->gps_huart);
		}
	}
}
